frontend/test/should_pass/abstract_element_reference_in_nested_pattern.gm
abstract node class AbstractNode;
abstract edge class AbstractEdge;
