frontend/test/should_fail/edge_model_001.gm
edge class A extends AEdge;